Archive2/6c/b559ab1f40f4fd/output
main.cpp:5:1: error: expected unqualified-id before 'new'
 new(memory) Derived();
 ^
main.cpp:7:1: error: 'ptr' does not name a type
 ptr->~Base();
 ^
