Archive2/6c/b559ab1f40f4fd/main.cpp
class Base {};
class Derived : public Base {};

char memory[100];
new(memory) Derived();
Base* ptr = (Base*)memory;
ptr->~Base();